# innocence

./: .gitignore  .gitmodules  README.md  compress.bat  configure_debug.bat  configure_debug.sh  configure_experimental.bat  configure_release.bat  configure_release.sh  readme.txt
sources/: CMakeLists.txt
sources/auditor/: Auditor.hpp  AuditorMain.cpp  CMakeLists.txt
sources/blaspheme/: Blaspheme.hpp  CMakeLists.txt
sources/blaspheme/hash/: Hash.cpp  Hash.hpp  Md5.cpp
sources/blaspheme/protocol/: Authentification.cpp  Authentification.hpp  Session.cpp  Session.hpp
sources/blaspheme/transfer/: FileTransfer.cpp  FileTransfer.hpp  GenericTransfer.hpp
sources/bucket/: BucketMain.cpp  CMakeLists.txt
sources/common/: Log.cpp  Log.hpp  LogObserver.hpp  LogServer.cpp  LogServer.hpp  Logger.cpp  Logger.hpp
sources/debugger/: CMakeLists.txt
sources/debugger/src/: DebuggerMain.cpp  DebuggingServerWindow.cpp  DebuggingServerWindow.hpp
sources/deprecated/: FirefoxPasswordDecoder.cpp  LogServer.cpp
sources/inhibition/: CMakeLists.txt
sources/inhibition/inhibitor/: ClientConfig.hpp  Inhibiter.cpp  Inhibiter.hpp  InhibiterMain.cpp
sources/inhibition/substrate/: CommandDispatcher.cpp  CommandDispatcher.hpp  InhibitionCore.hpp  InhibitionCoreImpl.cpp  InhibitionCoreImpl.hpp  InhibitionMain.cpp  ProgramStart.cpp  ProgramStart.hpp  RemoteControlFunctions.cpp  RemoteControlFunctions.hpp  Screenshot.cpp  Screenshot.hpp  ServerAbstractFunction.hpp
sources/malicious/: BinaryRessource.cpp  BinaryRessource.hpp  CMakeLists.txt  Elevator.cpp  Exception.cpp  Exception.hpp  FastSmtp.cpp  Injector.cpp  Injector.hpp  InternetExplorer.cpp  InternetExplorer.hpp  Keylogger.cpp  Keylogger.hpp  MsnPasswordDecoder.cpp  Passwords.cpp  Passwords.hpp  ProcessHider.cpp  ProcessHider.hpp  Screenshot.cpp  StealthDriver.hpp
sources/network/: CMakeLists.txt  Exception.cpp  Exception.hpp  GenericSocket.hpp  Interface.hpp  Network.hpp  Pipe.cpp  Pipe.hpp  Proxy.cpp  Proxy.hpp  Select.cpp  Select.hpp  Service.hpp  Socket.hpp  SocketHandle.cpp  SocketHandle.hpp  Stream.cpp  Stream.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp  Timeout.cpp  Timeout.hpp  Types.hpp  UdpSocket.cpp  UdpSocket.hpp
sources/system/: CMakeLists.txt  File.cpp  File.hpp  Process.cpp  Process.hpp  ProcessManager.cpp  ProcessManager.hpp  Registry.hpp  System.cpp  System.hpp  ThisProcess.cpp  ThisProcess.hpp  Uac.cpp  Uac.hpp
sources/testing/: CMakeLists.txt
sources/testing/dll/: dll.cpp
sources/testing/elevation/: elevation.cpp
sources/testing/elevation64/: elevation.cpp
sources/testing/elevator/: elevator.cpp
sources/testing/hideproc/: hideproc.cpp
sources/testing/hidewin/: hidewin.cpp
sources/testing/injection/: injection.cpp
sources/testing/isadmin/: isadmin.cpp
sources/testing/isinjected/: isinjected.cpp
sources/testing/keyhooker/: keyhooker.cpp
sources/testing/mail/: FastSmtp.cpp  FastSmtp.hpp  mail.cpp
sources/testing/passwords/: passwords.cpp
sources/testing/pipe/: pipe.cpp
sources/testing/registre/: registre.cpp
sources/testing/rshell/: rshell.cpp
sources/testing/screenshot/: screenshot.cpp
sources/testing/session/: session.cpp
sources/testing/transfer/: transfer.cpp
sources/thesleeper/: CMakeLists.txt
sources/thesleeper/src/: Client.cpp  Client.hpp  ClientTableModel.cpp  ClientTableModel.hpp  EditClientDialog.cpp  EditClientDialog.hpp  ListeningThread.cpp  ListeningThread.hpp  PasswordsDialog.cpp  ServerWindow.cpp  ServerWindow.hpp  TheSleeperMain.cpp
sources/thesleeper/ui/: Passwords.ui  TheSleeper.ui
sources/utils/elevator/: Win7Elevate.sln
sources/utils/jpeg/: jmorecfg.h
src/: Build.hpp  CMakeLists.txt  Identity.hpp  Innocence.hpp  Settings.hpp
src/auditor/: Auditor.hpp  CMakeLists.txt
src/auditor/agent/: AuditorAgent.cpp  CMakeLists.txt
src/auditor/server/: CMakeLists.txt
src/common/: Build.hpp  Common.hpp  Convert.hpp  Exception.hpp  Identity.hpp  Innocence.hpp  Menu.hpp  NonCopyable.hpp  Observable.hpp  ParseOptions.hpp  RandomHat.hpp  Serializable.hpp  Settings.hpp  Singleton.hpp  Utility.hpp  WindowsWrapper.hpp
src/deprecated/: Bucket.cpp  FirefoxPasswordDecoder.cpp  LogServer.cpp  LogServer.hpp
src/lib/: otlv4.h
src/lib/audit/: Audit.cpp  Audit.hpp  AuditServer.cpp  AuditServer.hpp  CMakeLists.txt  GlobalAudit.cpp  GlobalAudit.hpp  Run.cpp  Run.hpp
src/lib/blaspheme/: Blaspheme.hpp  CMakeLists.txt
src/lib/common/: CMakeLists.txt  Convert.hpp  Exception.cpp  Exception.hpp  Log.cpp  Log.hpp  LogObserver.cpp  LogObserver.hpp  LogServer.cpp  LogServer.hpp  Menu.cpp  Menu.hpp  Message.cpp  Message.hpp  NonCopyable.hpp  Observable.hpp  Singleton.hpp
src/lib/jpeg/: jerror.h  jpeglib.h
src/lib/keyboard/: CMakeLists.txt  JamKeyObserver.cpp  JamKeyObserver.hpp  KeyLogObserver.cpp  KeyLogObserver.hpp  KeyObserver.hpp  Keyboard.cpp  Keyboard.hpp  Keylogger.cpp  Keylogger.hpp
src/lib/log/: CMakeLists.txt  Log.cpp  Log.hpp  LogObserver.cpp  LogObserver.hpp  LogServer.cpp  LogServer.hpp  Message.cpp  Message.hpp
src/lib/malicious/: BinaryRessource.cpp  BinaryRessource.hpp  CMakeLists.txt  Elevator.cpp  Elevator.hpp  Exception.cpp  Exception.hpp  FastSmtp.cpp  FastSmtp.hpp  Injector.cpp  Injector.hpp  InternetExplorer.cpp  InternetExplorer.hpp  Keylogger.cpp  Keylogger.hpp  MsnPasswordDecoder.cpp  NetScan.cpp  NetScan.hpp  Passwords.cpp  Passwords.hpp  ProcessHider.cpp  ProcessHider.hpp  ProgramStart.cpp  ProgramStart.hpp  Screenshot.cpp  Screenshot.hpp  StealthDriver.hpp
src/lib/network/: CMakeLists.txt  Exception.cpp  GenericSocket.hpp  Header.cpp  Header.hpp  Interface.hpp  Network.hpp  Packet.cpp  Packet.hpp  Pipe.cpp  Pipe.hpp  Proxy.hpp  RawSocket.cpp  RawSocket.hpp  Select.cpp  Select.hpp  SelectSet.cpp  SelectSet.hpp  Service.cpp  Service.hpp  Socket.cpp  Socket.hpp  SocketException.cpp  SocketException.hpp  SocketHandle.cpp  SocketHandle.hpp  Stream.cpp  (+12 more)
src/master/: CMakeLists.txt  thesleeper.qrc
src/slave/: CMakeLists.txt
src/testing/: CMakeLists.txt
src/utils/: bnhide.sys  buildnum
(+151 files in other folders)
